--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: golang-templates-parsing
     spec:
       containers:
-        - name: golang-templates-parsing
-          image: rayeneamina/golang_templates_parsing
+        - name: go-temp-parsing
+          image: rayeneamina/go-temp-parsing:0.0.3
           ports:
-            - containerPort: 8080
+            - containerPort: 8085
